@@ -2,7 +2,9 @@ package br.com.fiap.workshop_management_system.servicelifecycle.serviceorder.inf
 
 import br.com.fiap.workshop_management_system.servicelifecycle.serviceorder.domain.model.DiagnosisItem;
 import br.com.fiap.workshop_management_system.servicelifecycle.serviceorder.domain.model.Money;
+import br.com.fiap.workshop_management_system.servicelifecycle.serviceorder.domain.model.Priority;
 import br.com.fiap.workshop_management_system.servicelifecycle.serviceorder.domain.model.ServiceOrder;
+import br.com.fiap.workshop_management_system.servicelifecycle.serviceorder.domain.model.ServiceOrderStatus;
 import br.com.fiap.workshop_management_system.servicelifecycle.serviceorder.domain.model.StockItemType;
 import br.com.fiap.workshop_management_system.servicelifecycle.serviceorder.domain.model.StockRequirement;
 import br.com.fiap.workshop_management_system.servicelifecycle.serviceorder.domain.model.VehicleSnapshot;
@@ -17,9 +19,17 @@ import org.springframework.transaction.support.TransactionTemplate;
 import java.math.BigDecimal;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 import java.util.UUID;
+import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.Future;
+import java.util.concurrent.TimeUnit;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 /**
@@ -42,14 +52,17 @@ class ServiceOrderRepositoryImplTest {
     void persistsAndReloadsAssignedTechnicianId() {
         TransactionTemplate transactionTemplate = new TransactionTemplate(transactionManager);
         UUID technicianId = UUID.randomUUID();
+        UUID diagnosedByTechnicianId = UUID.randomUUID();
+        java.time.Instant diagnosedAt = java.time.Instant.parse("2026-08-22T18:00:00.123456Z");
 
         UUID serviceOrderId = transactionTemplate.execute(status -> {
             ServiceOrder serviceOrder = ServiceOrder.create(
                     UUID.randomUUID(), UUID.randomUUID(),
-                    new VehicleSnapshot("ABC1D23", "Fiat", "Uno", 2015));
+                    new VehicleSnapshot("ABC1D23", "Fiat", "Uno", 2015), "Initial assessment");
+            serviceOrder.assignDiagnosisAssignee(UUID.randomUUID());
             DiagnosisItem item = new DiagnosisItem(
                     UUID.randomUUID(), "Troca de óleo", Money.brl(BigDecimal.TEN), List.of());
-            serviceOrder.performDiagnosis(List.of(item));
+            serviceOrder.performDiagnosis(List.of(item), diagnosedByTechnicianId, diagnosedAt);
             UUID executionId = serviceOrder.serviceExecutions().get(0).id();
             serviceOrder.confirmTechnicianAssignment(executionId, technicianId);
 
@@ -61,8 +74,59 @@ class ServiceOrderRepositoryImplTest {
 
         transactionTemplate.executeWithoutResult(status -> {
             Optional<ServiceOrder> reloaded = repository.findById(serviceOrderId);
-            assertEquals(technicianId, reloaded.orElseThrow().serviceExecutions().get(0).assignedTechnicianId());
+            var execution = reloaded.orElseThrow().serviceExecutions().getFirst();
+            assertEquals(technicianId, execution.assignedTechnicianId());
+            assertEquals(diagnosedByTechnicianId, execution.diagnosedByTechnicianId());
+            assertEquals(diagnosedAt, execution.diagnosedAt());
         });
+    }
+
+    @Test
+    void serializesConcurrentFindsForUpdateOnTheSameServiceOrder() throws Exception {
+        TransactionTemplate transactionTemplate = new TransactionTemplate(transactionManager);
+        UUID serviceOrderId = transactionTemplate.execute(status -> {
+            ServiceOrder serviceOrder = ServiceOrder.create(
+                    UUID.randomUUID(), UUID.randomUUID(),
+                    new VehicleSnapshot("ABC1D23", "Fiat", "Uno", 2015), "Initial assessment");
+            repository.save(serviceOrder);
+            return serviceOrder.id();
+        });
+        CountDownLatch firstLockAcquired = new CountDownLatch(1);
+        CountDownLatch releaseFirstLock = new CountDownLatch(1);
+        CountDownLatch secondTransactionStarted = new CountDownLatch(1);
+        ExecutorService executor = Executors.newFixedThreadPool(2);
+
+        try {
+            Future<?> firstTransaction = executor.submit(() -> transactionTemplate.executeWithoutResult(status -> {
+                repository.findByIdForUpdate(serviceOrderId).orElseThrow();
+                firstLockAcquired.countDown();
+                await(releaseFirstLock);
+            }));
+            assertTrue(firstLockAcquired.await(5, TimeUnit.SECONDS));
+
+            Future<?> secondTransaction = executor.submit(() -> transactionTemplate.executeWithoutResult(status -> {
+                secondTransactionStarted.countDown();
+                repository.findByIdForUpdate(serviceOrderId).orElseThrow();
+            }));
+            assertTrue(secondTransactionStarted.await(5, TimeUnit.SECONDS));
+            assertFalse(secondTransaction.isDone());
+
+            releaseFirstLock.countDown();
+            firstTransaction.get(5, TimeUnit.SECONDS);
+            secondTransaction.get(5, TimeUnit.SECONDS);
+        } finally {
+            releaseFirstLock.countDown();
+            executor.shutdownNow();
+        }
+    }
+
+    private void await(CountDownLatch latch) {
+        try {
+            latch.await();
+        } catch (InterruptedException exception) {
+            Thread.currentThread().interrupt();
+            throw new IllegalStateException("Interrupted while waiting for the concurrent transaction", exception);
+        }
     }
 
     @Test
@@ -73,7 +137,8 @@ class ServiceOrderRepositoryImplTest {
         UUID serviceOrderId = transactionTemplate.execute(status -> {
             ServiceOrder serviceOrder = ServiceOrder.create(
                     UUID.randomUUID(), UUID.randomUUID(),
-                    new VehicleSnapshot("ABC1D23", "Fiat", "Uno", 2015));
+                    new VehicleSnapshot("ABC1D23", "Fiat", "Uno", 2015), "Initial assessment");
+            serviceOrder.assignDiagnosisAssignee(UUID.randomUUID());
             serviceOrder.performDiagnosis(List.of(new DiagnosisItem(
                     UUID.randomUUID(),
                     "Troca de óleo",
@@ -84,7 +149,7 @@ class ServiceOrderRepositoryImplTest {
                             1,
                             "Filtro",
                             Money.brl(BigDecimal.ONE),
-                            false)))));
+                            false)))), UUID.randomUUID(), java.time.Instant.EPOCH);
             var execution = serviceOrder.serviceExecutions().getFirst();
             serviceOrder.freezeStockRequirements(execution.diagnosisId());
             serviceOrder.authorizeExecutionFromEstimate(UUID.randomUUID(), execution.id());
@@ -101,5 +166,53 @@ class ServiceOrderRepositoryImplTest {
             assertTrue(execution.stockRequirementsFrozen());
             assertEquals(reservationId, execution.stockReservationId());
         });
+    }
+
+    @Test
+    void persistsAndReloadsInitialAssessment() {
+        TransactionTemplate transactionTemplate = new TransactionTemplate(transactionManager);
+        String initialAssessment = "Vibração relatada ao frear";
+
+        UUID serviceOrderId = transactionTemplate.execute(status -> {
+            ServiceOrder serviceOrder = ServiceOrder.create(
+                    UUID.randomUUID(), UUID.randomUUID(),
+                    new VehicleSnapshot("ABC1D23", "Fiat", "Uno", 2015), initialAssessment);
+            repository.save(serviceOrder);
+            entityManager.flush();
+            entityManager.clear();
+            return serviceOrder.id();
+        });
+
+        transactionTemplate.executeWithoutResult(status -> assertEquals(
+                initialAssessment, repository.findById(serviceOrderId).orElseThrow().initialAssessment()));
+    }
+
+    @Test
+    void reconstitutesLegacyServiceOrderWithNullInitialAssessment() {
+        TransactionTemplate transactionTemplate = new TransactionTemplate(transactionManager);
+        UUID serviceOrderId = UUID.randomUUID();
+
+        transactionTemplate.executeWithoutResult(status -> {
+            entityManager.persist(new ServiceOrderJpaEntity(
+                    serviceOrderId,
+                    UUID.randomUUID(),
+                    UUID.randomUUID(),
+                    "ABC1D23",
+                    "Fiat",
+                    "Uno",
+                    2015,
+                    null,
+                    null,
+                    Priority.NORMAL,
+                    ServiceOrderStatus.RECEIVED,
+                    null,
+                    false,
+                    Set.of()));
+            entityManager.flush();
+            entityManager.clear();
+        });
+
+        transactionTemplate.executeWithoutResult(status -> assertNull(
+                repository.findById(serviceOrderId).orElseThrow().initialAssessment()));
     }
 }
